# XCRG

./: .gitignore  .gitmodules  README.md  XCRG-Spec.md
XCRG/: CMakeLists.txt
XCRG/libxcrg/: CMakeLists.txt
XCRG/libxcrg/src/: CRC32.h  Include.h  XCRG.cpp  XCRG.h
XCRG/src/: Main.cpp
